[gd_scene load_steps=10 format=3 uid="uid://5h17sy6f3tq1"]

[ext_resource type="Script" path="res://Scripts/mainmenu.gd" id="1_fwq1l"]
[ext_resource type="Texture2D" uid="uid://d4an8m32k8248" path="res://GodotAssets/icon.svg" id="1_imglc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_520li"]
texture = ExtResource("1_imglc")
modulate_color = Color(0.481789, 0.48179, 0.481789, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s2k78"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7l32j"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xthd2"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jk066"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(1, 1, 1, 0.980392)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j6lnj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ogb83"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fwq1l")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_520li")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -78.0
offset_right = 107.5
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(1, 0, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 1, 1)
theme_override_colors/font_focus_color = Color(1, 0, 1, 1)
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_s2k78")
theme_override_styles/hover = SubResource("StyleBoxFlat_7l32j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xthd2")
theme_override_styles/normal = SubResource("StyleBoxFlat_jk066")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(1, 0, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 1, 1)
theme_override_colors/font_focus_color = Color(1, 0, 1, 1)
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_j6lnj")
theme_override_styles/hover = SubResource("StyleBoxFlat_7l32j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xthd2")
theme_override_styles/normal = SubResource("StyleBoxFlat_jk066")
text = "Options"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(1, 0, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 1, 1)
theme_override_colors/font_focus_color = Color(1, 0, 1, 1)
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ogb83")
theme_override_styles/hover = SubResource("StyleBoxFlat_7l32j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xthd2")
theme_override_styles/normal = SubResource("StyleBoxFlat_jk066")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_top = 96.0
offset_right = 111.0
offset_bottom = 239.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Auydame"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_quit_pressed"]
